--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,6 +76,12 @@
           {% endif %}
           {% endif %}
           {% endfor %}
+          <li class="nav-item">
+            <a class="nav-link" href="/assets/pdf/resume.pdf"
+              target="_blank">
+              resume
+            </a>
+          </li>
           {% if site.enable_darkmode %}
             <div class = "toggle-container">
               <a id = "light-toggle">
