--- a/_includes/header.html
+++ b/_includes/header.html
@@ -77,6 +77,12 @@
           {% endif %}
           {% endfor %}
           <li class="nav-item">
+            <a class="nav-link" href="/assets/pdf/curriculum_vitae.pdf"
+              target="_blank">
+              curriculum vitae
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/assets/pdf/resume.pdf"
               target="_blank">
               resume
