--- a/_includes/header.html
+++ b/_includes/header.html
@@ -80,15 +80,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/assets/pdf/curriculum_vitae.pdf"
               target="_blank">
-              curriculum vitae
+              cv
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/assets/pdf/resume.pdf"
               target="_blank">
               resume
             </a>
-          </li>
+          </li> -->
           {% if site.enable_darkmode %}
             <div class = "toggle-container">
               <a id = "light-toggle">
