change layout bg color

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,6 +29,13 @@
   }
 }
 
+// global-theme-block
+.global-theme-block {
+  display: inline-block;
+  background-color: var(--global-theme-color);
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 // TODO: redefine content layout.
 
 
