--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -5,7 +5,7 @@
           <h5 class="font-weight-bold">{{ teaching.course_name}}</h5>
         </div>
         <div class="col-sm-2 text-left text-sm-right">
-          <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle">
+          <span class="badge font-weight-bold global-theme-block text-uppercase align-middle">
             {{ teaching.course_number}}
           </span>
         </div>
