--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header>
-
     <!-- Nav Bar navbar-expand-md grey lighten-5 z-depth-1 -->
     
-    <nav id="navbar" class="navbar navbar-light navbar-expand-md grey lighten-3 z-depth-1 {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
+    <nav id="navbar" class="navbar navbar-light navbar-expand-md {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}">
     <div class="container">
       {% if page.title != "about" %}
       <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl | prepend: site.url }}/">
@@ -26,7 +25,7 @@
           <!-- About -->
           <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
             <a class="nav-link" href="{{ '/' | relative_url }}">
-              about
+              <i class="fas fa-home"></i>
               {% if page.title == "about" %}
                 <span class="sr-only">(current)</span>
               {% endif %}
@@ -77,12 +76,6 @@
           {% endif %}
           {% endif %}
           {% endfor %}
-          <li class="nav-item">
-            <a class="nav-link" href="/assets/pdf/curriculum_vitae.pdf"
-              target="_blank">
-              cv
-            </a>
-          </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="/assets/pdf/resume.pdf"
               target="_blank">
