--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -29,6 +29,7 @@ layout: default
       {{ content }}
     </div>
 
+    <h3 style="font-weight: bold">Hot Topics</h3>
     {% if page.news %}
       {% include news.html %}
     {% endif %}
