--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,8 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-     {% if site.title == "blank" %}<span class="font-weight-bold">Knowledge Discovery Laboratory</span> {{ site.middle_name }} {% else %}{{ site.title }}{% endif %}
+     {% if site.title == "blank" %}<span class="font-weight-bold">Knowledge Discovery Laboratory</span> 
+     {% else %}{{ site.title }}{% endif %}
     </h1>
      <p class="desc">{{ page.description }}</p>
   </header>
