--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -92,7 +92,7 @@ blockquote {
 .navbar {
   box-shadow: none;
   border-bottom: 1px solid $grey-color-light;
-  background-color: rgba(255, 17, 0, 0.534);
+  background-color: var(--global-bg-color);;
   opacity: 0.95;
 }
 .navbar .dropdown-menu {
