--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,4 +1,4 @@
-<a href="https://www.umb.edu" target="_blank" title="University of Massachusetts Boston"><img style="width:30px" src="{{ 'umb_logo.jpg' | prepend: '/assets/img/' | relative_url }}" alt="University of Massachusetts Boston"></img></a>
+<a href="https://www.umb.edu" target="_blank" title="University of Massachusetts Boston"><img style="height:95%" src="{{ 'umb_logo.jpg' | prepend: '/assets/img/' | relative_url }}" alt="University of Massachusetts Boston"></img></a>
 {% if site.email %}<a href="mailto:{{ site.email | encode_email }}"><i class="fas fa-envelope-square"></i></a>{% endif %}
 {% if site.orcid_id %}<a href="https://orcid.org/{{ site.orcid_id }}" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>{% endif %}
 {% if site.scholar_userid %}<a href="https://scholar.google.com/citations?user={{ site.scholar_userid }}" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar-square"></i></a>{% endif %}
